# Agent_Fact_Detection_System

./: .env.example  .gitignore  README.md  implementation_plan.md  pyproject.toml  requirements.txt
notebooks/: evaluation_models.ipynb
scripts/: list_models.py  list_models_requests.py
src/: app.py
src/agent_orchestrator/: graph.py  nodes.py  state.py
src/data_ingestion_transcription/: audio_extractor.py
src/static/: app.js  index.html  styles.css
